--- a/style.css
+++ b/style.css
@@ -57,12 +57,12 @@ header {
 }
 
 body > * {
-  background-color: red;
+  background-color: #a9a9a9;
   padding: 1%;
 }
 
 main, header, nav, article, aside, footer, section {
-  background-color: rgba(0,255,0,0.5);
+  background-color: rgb(0, 255,0, 0.5);
   padding: 1%;
 }
 
